# shellm

./: Cargo.toml
src/: cli.rs  config.rs  error.rs  main.rs  output.rs
src/ai/: client.rs  mod.rs  prompt.rs
src/commands/: ask.rs  config.rs  explain.rs  mod.rs  review.rs
