[package]
name = "shellm"
version = "0.1.0"
edition = "2024"
description = "AI-powered shell assistant — natural language to terminal commands"

[dependencies]
# 命令行参数解析
clap = { version = "4", features = ["derive"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（调用 LLM API）
reqwest = { version = "0.12", features = ["json"] }

# 序列化 / 反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"
thiserror = "2"

# 终端输出美化
colored = "3"

# 交互式确认（执行命令前让用户确认）
dialoguer = "0.11"

# 配置文件路径（~/.config/shellm/）
directories = "6"
